--- a/Lab_08/index.html
+++ b/Lab_08/index.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Teko:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
-<body onload="changeBackgroundColor()">
-    <!--<div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
+<body>
+    <!--"<div>Icons made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>-->
 <div class="nav-logo">
         <div class="img-logo">
         <img src="game-controller.png" alt="" id="logo">
@@ -156,9 +156,9 @@
     </div>
 
     <div id="pokemon-heading">
-        <h1  onclick="displayPokemon()">Click here to look at my pokemon!</h1>
+        <h1>Click here to look at my pokemon!</h1>
         <img src="pokemon-4657023_960_720.png" alt="" id="pokemon-logo"> </div>
-        <section id="container"></section>
+        <section id="pokemon-container"></section>
    
 
 
