Removed inline JS

--- a/Lab_08/index.html
+++ b/Lab_08/index.html
@@ -23,14 +23,17 @@
        </div> 
        <div><a id="reset-color">Reset Color</a></div>
 
-       <div id="partner-container">
+       <div id="parent">
+                <div id="partner-container">
         <div id="my-partner">
             <img src="partner-cover.jpg" alt="">
             <div class="overlay">
                 <div class="text"><a href="https://cquinn21.github.io/lab4/">Checkout More Games Here</a> </div>
               </div>
         </div>
-    </div>
+    </div>  
+       </div>
+
    
     <h2 id="featured-heading">Featured Games</h2>
     <div class="featured-games">
