--- a/Lab_08/index.html
+++ b/Lab_08/index.html
@@ -21,18 +21,18 @@
         <h1>Game Trust</h1>       
  </div>
        </div> 
-       <div><a id="reset-color">Reset Color</a></div>
+       <div id="reset-container"><a id="reset-color">Reset Color</a></div>
 
-       <div id="parent">
-                <div id="partner-container">
+      
+    <div id="partner-container">
         <div id="my-partner">
             <img src="partner-cover.jpg" alt="">
             <div class="overlay">
                 <div class="text"><a href="https://cquinn21.github.io/lab4/">Checkout More Games Here</a> </div>
-              </div>
+            </div>
         </div>
     </div>  
-       </div>
+   
 
    
     <h2 id="featured-heading">Featured Games</h2>
